--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="refresh_list_button">Refresh</string>
     <string name="immage_stub">Immage STUB</string>
+    <string name="moviePosterDescription">Movie Poster</string>
 </resources>
